...
    <!-- Strings related to login -->
    <string name="prompt_dni">DNI</string>
    <string name="action_sign_in">Identificarse</string>
    <string name="error_invalid_dni">El DNI no es válido</string>
    <string name="error_incorrect_dni">El DNI indicado no existe</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="omit_sign_in">Ir a ver centros</string>
    <string name="center_name">Centro de Salud de Valverde del Fresno</string>
    <string name="adress_center">Av. del Ejemplo, S/N, Cáceres 10890</string>
    <string name="city_center">Valverde del Fresno</string>
    <string name="tlfno_center_cab">Teléfono del centro</string>
    <string name="tlfno_center">927345423</string>
    <string name="tlfno_urg_center_cab">Teléfono de urgencias</string>
...
